# fastapi-monitoring

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  generate_dashboards.sh  pyproject.toml
.github/workflows/: ci-cd.yml  dashboards.yml
ansible/: inventory.ini  playbook.yml
ansible/templates/: prometheus.yml.j2
app/: main.py
haproxy/: haproxy.cfg
logstash/: logstash.conf
monitoring/dashboards/: fastapi-dashboard.libsonnet
monitoring/provisioning/: dashboard.yaml
redis-conf/: sentinel.conf
scripts/: start-sentinel.sh
tests/: test_main.py
