[project]
name = "fastapi-monitoring"
version = "0.1.0"
description = ""
authors = [{name = "K-scorpi"}]
readme = "README.md"
requires-python = ">=3.10.7,<3.14"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10.7,<3.14"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
requests = "^2.32.4"
pytest = "^8.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"